ingress/resources/acd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: acd-ingress
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - academy.cberen.com
      secretName: cberen-tls
  rules:
    - host: academy.cberen.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: 
                name: academy-svc
                port: 
                  number: 3000
