ingress/resources/aut-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: aut-ingress
spec:
  # ingressClassName: nginx
  tls:
  - hosts:
    - aut.kberen.com
    secretName: le-tls
  rules:
  - host: aut.kberen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: aut-svc
            port: 
              number: 4000
