ingress/resources/log-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: log-ingress
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
        - log.kberen.com
      secretName: le-tls
  rules:
  - host: log.kberen.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: log-svc
              port: 
                number: 4600
