ingress/resources/oauth-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: oauth-ingress
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
        - oauth.cberen.com
      secretName: cberen-tls
  rules:
  - host: oauth.cberen.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: oauth-svc
              port: 
                number: 4700
