ingress/resources/rnt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: rnt-ingress
spec:
  # ingressClassName: nginx
  tls:
    - hosts:
        - rnt.cberen.com
      secretName: cberen-tls
  rules:
  - host: rnt.cberen.com
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service: 
              name: rnt-svc
              port: 
                number: 4200
