ingress/resources/vwt-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
  name: vwt-ingress
spec:
  # ingressClassName: nginx
  tls:
  - hosts:
    - vwt.kberen.com
    secretName: le-tls
  rules:
  - host: vwt.kberen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: vwt-svc
            port: 
              number: 4500
